BusOne/src/objects/Medical_Inquiry_Audit_vod__c.object
<CustomObject>
    <description>Medical Inquiry Audit is a read-only object maintained by the Medcial_Inquiry_To_Audit_vod trigger on Medical_Inquiry_vod that stores audit history of updates and deletions of Medical Inquiry records. A row is created here only if a Medical Inquiry has been updated or deleted - an audit record does not get created upon creation of a Medical Inquiry.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <description>Account is the audit representation of the Account Id field on the Medical Inquiry object.</description>
        <inlineHelpText>Account is the audit representation of the Account Id field on the Medical Inquiry object.</inlineHelpText>
        <label>Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_vod__c</fullName>
        <description>Action represents the type of Action performed on the Medical Inquiry record that triggered the creation of the Medical Inquiry Audit record. &quot;U&quot; represents Update. &quot;D&quot; represents Delete.</description>
        <inlineHelpText>Action represents the type of Action performed on the Medical Inquiry record that triggered the creation of the Medical Inquiry Audit record. &quot;U&quot; represents Update. &quot;D&quot; represents Delete.</inlineHelpText>
        <label>Action</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>he audit representation of the Address Line 1 field on the Medical Inquiry object.</description>
        <inlineHelpText>he audit representation of the Address Line 1 field on the Medical Inquiry object.</inlineHelpText>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>The audit representation of the Address Line 2 field on the Medical Inquiry object.</description>
        <inlineHelpText>The audit representation of the Address Line 2 field on the Medical Inquiry object.</inlineHelpText>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <description>The audit representation of the Call field (text representation of the call&apos;s SFDC ID)on the Medical Inquiry object.</description>
        <label>Call</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>The audit representation of the City field on the Medical Inquiry object.</description>
        <inlineHelpText>The audit representation of the City field on the Medical Inquiry object.</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <description>The audit representation of the Country field on the Medical Inquiry object.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Method_vod__c</fullName>
        <description>The audit representation of the Delivery Method field on the Medical Inquiry object.</description>
        <inlineHelpText>The audit representation of the Delivery Method field on the Medical Inquiry object.</inlineHelpText>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Urgent_Mail_vod</fullName>
                </value>
                <value>
                    <fullName>Mail_vod</fullName>
                </value>
                <value>
                    <fullName>Phone_vod</fullName>
                </value>
                <value>
                    <fullName>Fax_vod</fullName>
                </value>
                <value>
                    <fullName>Email_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclaimer_vod__c</fullName>
        <description>The audit representation of the Disclaimer field on the Medical Inquiry object.</description>
        <label>Disclaimer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_vod__c</fullName>
        <description>The audit representation of the Email field on the Medical Inquiry object.</description>
        <inlineHelpText>The audit representation of the Email field on the Medical Inquiry object.</inlineHelpText>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_ID_vod__c</fullName>
        <description>The audit representation of the Entity Reference ID field on the Medical Inquiry object.</description>
        <label>Entity Reference ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Number_vod__c</fullName>
        <description>The audit representation of the Fax Number field on the Medical Inquiry object.</description>
        <inlineHelpText>The audit representation of the Fax Number field on the Medical Inquiry object.</inlineHelpText>
        <label>Fax Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Identifier_vod__c</fullName>
        <description>The audit representation of the Group Identifier field on the Medical Inquiry object.</description>
        <label>Group Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Text__c</fullName>
        <description>The audit representation of the Inquiry field on the Medical Inquiry object.</description>
        <inlineHelpText>The audit representation of the Inquiry field on the Medical Inquiry object.</inlineHelpText>
        <label>Inquiry Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The audit representation of the Lock field on the Medical Inquiry object.</description>
        <inlineHelpText>The audit representation of the Lock field on the Medical Inquiry object.</inlineHelpText>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Inquiry_Id_vod__c</fullName>
        <description>The audit representation of the Medical Inquiry Id field on the Medical Inquiry object.</description>
        <label>Medical Inquiry Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_vod__c</fullName>
        <description>The audit representation of the Phone Number field on the Medical Inquiry object.</description>
        <label>Phone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>The audit representation of the Product field on the Medical Inquiry object.</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cholecap</fullName>
                </value>
                <value>
                    <fullName>Restolar</fullName>
                </value>
                <value>
                    <fullName>Labrinone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Receipt_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The audit representation of the Request Receipt field on the Medical Inquiry object.</description>
        <label>Request Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rush_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The audit representation of the Rush Delivery field on the Medical Inquiry object.</description>
        <label>Rush Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Date_vod__c</fullName>
        <description>The audit representation of the Signature Date field on the Medical Inquiry object.</description>
        <label>Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>The audit representation of the Signature field on the Medical Inquiry object.</description>
        <label>Signature</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_vod__c</fullName>
        <description>The audit representation of the State field on the Medical Inquiry object.</description>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>The audit representation of the Status field on the Medical Inquiry object.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New_vod</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Submitted_vod</fullName>
                </value>
                <value>
                    <fullName>Saved_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By_Mobile_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The audit representation of the Submitted by Mobile field on the Medical Inquiry object.</description>
        <label>Submitted By Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>The audit representation of the Zip field on the Medical Inquiry object.</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Medical Inquiry Audit</label>
    <nameField>
        <displayFormat>ASI-{000000000}</displayFormat>
        <label>Medical Inquiry Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Inquiry Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>